<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_purchase_types"
        android:title="@string/action_purchase_types"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_riepilogo"
        android:title="@string/action_riepilogo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_esporta"
        android:title="@string/action_esporta"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_importa"
        android:title="@string/action_importa"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_condivisione"
        android:title="@string/action_condivisione"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_info"
        android:title="@string/action_info"
        app:showAsAction="never" />

</menu>
